[tool.poetry]
name = "deep_dream_implementation_on_mnist_using_pytorch_hooks"
version = "0.1.0"
description = ""
authors = ["Ian Scott Knight <isk@alumni.stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.5"
python-dotenv = "^0.14.0"
pandas = "^1.1.2"
scipy = "^1.5.2"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
torch = "^1.8.0"
torchvision = "^0.9.0"
tqdm = "^4.59.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
